public/style.css
:root {
  --main-color: #FFBA26;
  --primary-text-color: #242423;
  --main-bg-color: #FFEBE2;
  --grey-color: #F7FCFF;
}

*, *::before, *::after {
    box-sizing: border-box;    
}
.visually-hidden {
  position: absolute !important;
  clip: rect(1px, 1px, 1px, 1px);
  padding: 0 !important;
  border: 0 !important;
  height: 1px !important;
  width: 1px !important;
  overflow: hidden;
}

body {
    margin: 0;
    font-family: 'Inter', sans-serif;
    background-color: var(--main-bg-color);
}

#root {
    height: 100vh;
    width: 100vw;

    display: flex;
    align-items: center;
    justify-content: center;
}

.title {
    font-weight: 700;
    font-size: 2rem;
    color: var(--primary-text-color);
}

.app-container {
    width: 90%;
}

.back-arrow {
    color: var(--primary-text-color);
}

.form {
    display: flex;
    flex-direction: column;
}

.input {
    padding: 1em;
    background: var(--grey-color);
    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.1);
    border: none;
    border-radius: 300px;
    margin-bottom: 1em;
    text-indent: 0.5em;
    font-size: 1rem;
}

.button {
    display: block;
    width: 100%;
    padding: 1em;
    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.1);
    border: none;
    border-radius: 300px;
    margin-bottom: 0.5em;
    color: var(--primary-text-color);
    font-weight: 700;
    font-size: 1rem;
    cursor: pointer;
    text-align: center;
    text-decoration: none;
}

.button-primary {
    background-color: var(--main-color);
}

.button-secondary {
    background-color: var(--grey-color);
}

.login-link {
    display: block;
    width: fit-content;
    margin: auto;
    color: var(--primary-text-color);
    text-decoration: none;
    padding-bottom: 0.1em;
    border-bottom: 1px solid;
}

.translation-language-option {
    display: block;
    text-align: center;
    padding: 1em;
    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.1);
    border: none;
    border-radius: 1rem;
    margin-bottom: 0.5em;
    color: var(--primary-text-color);
    font-size: 1rem;
    background-color: var(--grey-color);
    cursor: pointer;
}

.translation-language-option:last-of-type {
    margin-bottom: 3rem;
}

input[type = radio]:checked + label {
    font-weight: 700;
    background-color: var(--main-color);
}

/*
    MAIN SCREEN START
*/

.nav {
    display: flex;
    justify-content: space-between;
    font-size: 1.5rem;
    position: absolute;
    top: 2rem;
    width: 90%;
}

.add-word-form {
    border-radius: 30px;
    align-items: center;
    border: 1px solid var(--main-color);
    overflow: hidden;
    background-color: var(--grey-color);
    margin-bottom: 1rem;
}

.add-word-form i {
    margin-left: 1.3rem;
    padding: 0;
}


.add-word-form input {
  flex: 1;
  width: 100%;
  border: none;
  padding: 1rem;
  font-size: 16px;
  background-color: transparent;
  overflow: hidden;
}

input:focus{
    outline: none;
}

.fa-search {
  color: #999;
}

.addWordBtn {
    background-color: var(--main-color);
    width: 30%;
    margin: auto;
}

/*
    MAIN SCREEN END
*/

/* WORD START*/
.notification {
    position: absolute;
    margin: auto;
    border-radius: 30px;
    padding: 2rem 1rem;
    text-align: center;
    border: 1px solid var(--main-color);
    overflow: hidden;
    background-color: var(--grey-color);
    width: 90%;
}

.word {
    display: flex;
    flex-direction: column;
    gap: 2rem;

    padding: 1rem;
    background-color: var(--grey-color);
    border-radius: 1rem;
}
.baseForm {
    font-weight: 700;
}
.blur {
    filter: blur(5px);
}

.add-word {
    margin-top: 3rem;
    color: var(--main-color);
    font-weight: 700;
    font-size: 5rem;
    text-align: center;
}
/* WORD END*/

/* WORDLIST START */
.wordList {
    display: flex;
    flex-direction: column;

    padding: 0.5rem 1rem;
    background-color: var(--grey-color);
    border-radius: 1rem;
    max-height: 60vh;
    overflow: auto;
}

.wordList--word-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.wordList--word-container i {
    padding: 0.5em;
}

.wordList--word-container:not(:last-child) {
    border-bottom: 1px solid var(--main-bg-color);
}

.word-editor {
    height: fit-content;
    width: 90%;

    position: absolute;
    top: 0;
    bottom: 0;
    margin: auto;
    left: 0;
    right: 0;

}

i {
    display: block;
}

.blank-screen {
    position: absolute;
    top: 0;
    left: 0;
    height: 100vh;
    width: 100vw;
    background-color: rgba(255,255,255, 0.3);
    backdrop-filter: blur(5px);
}



/* WORDLIST END */

/* PRACTICEWORDS START */
.word-number {
    text-align: center;
}
.word-container {
    background-color: var(--grey-color);
    border-radius: 1rem;
    padding: 1em;
    display: flex;
    flex-direction: column;
    gap: 1rem;
}
.baseWord {
    background: none;
    border: none;
    border-bottom: 2px solid var(--main-color);
    margin-left: 0.5em;
}
/* PRACTICEWORDS END */

